图片字体解析 file-loader url-loader&limit

--- a/src/search.less
+++ b/src/search.less
@@ -1,4 +1,9 @@
+// @font-face{
+//     font-family: 'special-font';
+//     src: url('./images/special-font.otf') format('truetype'); //未有字体文件
+// }
 .search-text{
     font-size: 20px;
     color: red;
+    // font-family:'special-font' ;
 }
